<resources>
    <string name="app_name">Edit</string>
    <string name="button1">图片</string>
    <string name="button2">表格</string>
    <string name="button3">视频</string>
    <string name="button4">音频</string>

    <string name="button1_1">灰度</string>
    <string name="button1_2">RGB</string>
    <string name="button1_3">HSV</string>

    <string name="button2_1">新建表格</string>
    <string name="button3_1">视频裁剪</string>
    <string name="button4_1">音频裁剪</string>

    <string name="button1_choose">选择图片</string>
    <string name="Image">图片</string>
    <string name="button_save">保存图片</string>
    <string name="Saturation">饱和度</string>
    <string name="Brightness">亮度</string>
    <string name="Contrast">对比度</string>
    <string name="play">播放</string>
    <string name="pause">暂停</string>
    <string name="stop">停止</string>
</resources>
