<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".button4Activity">

    <Button

        android:id="@+id/play"

        android:layout_width="88dp"

        android:layout_height="wrap_content"

        android:layout_marginTop="442dp"
        android:layout_marginEnd="323dp"
        android:layout_marginBottom="241dp"
        android:layout_weight="1"
        android:text="@string/play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button

        android:id="@+id/pause"

        android:layout_width="100dp"

        android:layout_height="wrap_content"

        android:layout_marginStart="161dp"
        android:layout_marginTop="442dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="241dp"
        android:layout_weight="1"
        android:text="@string/pause"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button

        android:id="@+id/stop"

        android:layout_width="0dp"

        android:layout_height="wrap_content"

        android:layout_marginTop="441dp"

        android:layout_marginBottom="242dp"
        android:layout_weight="1"
        android:text="@string/stop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>