<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".button1Activity">

    <Button
        android:id="@+id/button1_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="307dp"
        android:layout_marginTop="607dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="76dp"
        android:text="@string/button1_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button1_choose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:layout_marginTop="607dp"
        android:layout_marginEnd="215dp"
        android:layout_marginBottom="76dp"
        android:text="@string/button1_choose"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="83dp"
        android:layout_height="38dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="617dp"
        android:layout_marginEnd="310dp"
        android:layout_marginBottom="76dp"
        android:text="@string/button_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button1_4"
        android:layout_width="71dp"
        android:layout_height="52dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="550dp"
        android:layout_marginEnd="311dp"
        android:layout_marginBottom="133dp"
        android:text="线性灰度化"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button1_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:layout_marginTop="550dp"
        android:layout_marginEnd="215dp"
        android:layout_marginBottom="133dp"
        android:text="高斯模糊"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button1_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="307dp"
        android:layout_marginTop="550dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="133dp"
        android:text="素描"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button1_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="210dp"
        android:layout_marginTop="607dp"
        android:layout_marginEnd="113dp"
        android:layout_marginBottom="76dp"
        android:text="取消"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button1_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="210dp"
        android:layout_marginTop="548dp"
        android:layout_marginEnd="113dp"
        android:layout_marginBottom="135dp"
        android:text="怀旧"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Saturation" />

            <!-- 定义一个拖动条，并改变它的滑块外观 -->
            <SeekBar
                android:id="@+id/Saturationseekbar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:max="200"
                android:progress="100" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Brightness" />

            <!-- 定义一个拖动条，并改变它的滑块外观 -->
            <SeekBar
                android:id="@+id/Brightnessseekbar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:max="255"
                android:progress="127" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Contrast" />

            <!-- 定义一个拖动条，并改变它的滑块外观 -->
            <SeekBar
                android:id="@+id/Contrastseekbar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:max="127"
                android:progress="63" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/Imageview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="73dp"
        android:layout_weight="1"
        android:scaleType="matrix"
        android:visibility="visible"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

</android.support.constraint.ConstraintLayout>